Adjusts starter for simplicity and to use with the LWJ demo site later

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "eleventy-plugin-content-helpers",
+  "name": "eleventy-plugin-lwj",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
